added now.json file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </h2>
 
 <!--    Работа с DOM   -->
-    <script src="DOM/loopForOf.js"></script>
+    <script src="DOM/dom.js"></script>
 <!--    <script src="DOM/innerHTML.js"></script>-->
 <!--    <script src="DOM/outerHTML.js"></script>-->
 <!--    <script src="DOM/textContent.js"></script>-->
