--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 id="title" class="main-title" >
+    <h1 id="title" class="active">
         Open the console in Google Chrome: 'ALT + CTRL + J' or 'ALT + CMD + J'
     </h1>
-    <h2 class="main-title">
-        Oткрой console in Google Chrome: 'ALT + CTRL + J' или 'ALT + CMD + J'
+    <h2 class="active">
+        Oткрой console in Google Chrome Mac:  'ALT + CMD + J'
     </h2>
+    <h3 class="main-title">
+        Oткрой console in Google Chrome Win : 'ALT + CTRL + J'
+    </h3>
+    <div class="container">
+
+    </div>
 
 <!--    Работа с DOM   -->
     <script src="DOM/dom.js"></script>
-<!--    <script src="DOM/innerHTML.js"></script>-->
-<!--    <script src="DOM/outerHTML.js"></script>-->
-<!--    <script src="DOM/textContent.js"></script>-->
-<!--    <script src="DOM/hidden.js"></script>-->
-<!--    <script src="DOM/infoAboutElement.js"></script>-->
-<!--    END: Работа с DOM  -->
 </body>
 </html>
