adda domNavigation js file wth document.body

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 
 <!--    Работа с DOM   -->
     <script src="DOM/dom.js"></script>
+    <script src="DOM/domNavigation.js"></script>
 </body>
 </html>
