--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="wrap">
     <h1 id="title" class="active">
         Open the console in Google Chrome: 'ALT + CTRL + J' or 'ALT + CMD + J'
     </h1>
@@ -18,6 +19,7 @@
     <div class="container">
 
     </div>
+</div>
 
 <!--    Работа с DOM   -->
     <script src="DOM/dom.js"></script>
