array methods: pop/push shift/unshift

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 </div>
 
 <!--    Работа с DOM   -->
-    <script src="DOM/dom.js"></script>
-    <script src="DOM/domNavigation.js"></script>
+    <script src="DOM/DOM.js"></script>
+    <script src="DOM/DomNavigation.js"></script>
+    <script src="array.js"></script>
 </body>
 </html>
