attributes.js file added

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 </div>
 
 <!--    Работа с DOM   -->
-    <script src="DOM/DOM.js"></script>
-    <script src="DOM/DomNavigation.js"></script>
-    <script src="array.js"></script>
+<!--    <script src="DOM/DOM.js"></script>-->
+<!--    <script src="DOM/DomNavigation.js"></script>-->
+<!--    <script src="array.js"></script>-->
+    <script src="attributes.js"></script>
 </body>
 </html>
