getAttribute value from input

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <h3 class="main-title">
         Oткрой console in Google Chrome Win : 'ALT + CTRL + J'
     </h3>
+    <label for="input">
+        <input id="input" type="text" value="This is input">
+    </label>
     <div class="container">
 
     </div>
