--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 <!--    <script src="DOM/DOM.js"></script>-->
 <!--    <script src="DOM/DomNavigation.js"></script>-->
 <!--    <script src="array.js"></script>-->
-    <script src="attributes.js"></script>
+<!--    <script src="attributes.js"></script>-->
+<script src="boolean.js"></script>
+
 </body>
 </html>
