--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <!--    <script src="DOM/DomNavigation.js"></script>-->
 <!--    <script src="array.js"></script>-->
 <!--    <script src="attributes.js"></script>-->
-<script src="boolean.js"></script>
+<!--<script src="boolean.js"></script>-->
+<script src="classes.js"></script>
 
 </body>
 </html>
