conditions if/else/ternary

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 <!--    <script src="array.js"></script>-->
 <!--    <script src="attributes.js"></script>-->
 <!--<script src="boolean.js"></script>-->
-<script src="classes.js"></script>
+<!--<script src="classes.js"></script>-->
+<script src="conditions.js"></script>
 
 </body>
 </html>
