--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 <!--    <script src="attributes.js"></script>-->
 <!--<script src="boolean.js"></script>-->
 <!--<script src="classes.js"></script>-->
-<script src="conditions.js"></script>
+<!--<script src="conditions.js"></script>-->
+<script src="cycles.js"></script>
 
 </body>
 </html>
