--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
 </div>
 
 <!--    Работа с DOM   -->
-<!--    <script src="DOM/DOM.js"></script>-->
-<!--    <script src="DOM/DomNavigation.js"></script>-->
-<!--    <script src="array.js"></script>-->
-<!--    <script src="attributes.js"></script>-->
+<!--<script src="DOM/DOM.js"></script>-->
+<!--<script src="DOM/DomNavigation.js"></script>-->
+    <script src="DOM/events.js"></script>
+<!--<script src="array.js"></script>-->
+<!--<script src="attributes.js"></script>-->
 <!--<script src="boolean.js"></script>-->
 <!--<script src="classes.js"></script>-->
 <!--<script src="conditions.js"></script>-->
-<script src="cycles.js"></script>
+<!--<script src="cycles.js"></script>-->
 
 </body>
 </html>
