examples file added README file added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 <!--    Работа с DOM   -->
 <!--<script src="DOM/DOM.js"></script>-->
 <!--<script src="DOM/DomNavigation.js"></script>-->
-    <script src="DOM/events.js"></script>
+<!--<script src="DOM/events.js"></script>-->
+<script src="DOM/examples.js"></script>
 <!--<script src="array.js"></script>-->
 <!--<script src="attributes.js"></script>-->
 <!--<script src="boolean.js"></script>-->
