change 2 variables values  without 3d

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <!--<script src="classes.js"></script>-->
 <!--<script src="conditions.js"></script>-->
 <!--<script src="cycles.js"></script>-->
+<!--<script src="variables.js"></script>-->
 
 </body>
 </html>
